--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,6 +16,7 @@ apps:
 parts:
   hapis:
     source: https://github.com/hapi-server/server-nodejs/releases/download/v1.0.10/hapi-server-v1.0.10-linux-x64.tgz
+    plugin: dump
   gnu-bash:
     source: http://ftp.gnu.org/gnu/bash/bash-4.3.tar.gz
     plugin: nil
