--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: hapis
+name: hapis1
 base: core18
-version: '1.0.10'
+version: '1.0.11'
 summary: Hapi Server Linux-x64
 description: |
   Hapi Server Linux-x64
@@ -8,19 +8,22 @@ grade: devel
 confinement: devmode
 
 apps:
-  hapis:
-    command: /snap/hapis/current/bin/node /snap/hapis/current/test/server-test.js 
+  curl:
+    command: curl
   bash:
-    command: /bin/bash
+    command: bash
+  hapis1:
+    command: /snap/hapis1/current/hapi-server-v1.0.11/bin/node /snap/hapis1/current/hapi-server-v1.0.11/test/server-test.js 
+
+  
 
 parts:
-  hapis:
-    source: https://github.com/hapi-server/server-nodejs/releases/download/v1.0.10/hapi-server-v1.0.10-linux-x64.tgz
+  hapis1:
+    source: https://github.com/drunkenlord/sna-test-1/releases/download/v1.0/hapi-server-v1.0.11.tar.gz
     plugin: dump
+  curl:
+    source: http://curl.haxx.se/download/curl-7.45.0.tar.bz2
+    plugin: autotools
   gnu-bash:
     source: http://ftp.gnu.org/gnu/bash/bash-4.3.tar.gz
-    plugin: nil
-
-
-#--logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
-#cd /snap/hapi-server/current && /bin/node test/server-test.js
+    plugin: autotools
