--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: hapis1
+name: hapi-combined
 base: core18
 version: '1.0.11'
 summary: Hapi Server Linux-x64
@@ -8,22 +8,23 @@ grade: devel
 confinement: devmode
 
 apps:
-  curl:
-    command: curl
-  bash:
-    command: bash
+  # curl:
+  #   command: curl
+  # bash:
+  #   command: bash
   hapis1:
-    command: /snap/hapis1/current/hapi-server-v1.0.11/bin/node /snap/hapis1/current/hapi-server-v1.0.11/test/server-test.js 
+     command: /snap/hapi-combined/current/bin/node /snap/hapi-combined/current/test/server-test.js
+  hapis-server:
+    command: /snap/hapi-combined/current/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
 
   
-
 parts:
   hapis1:
-    source: https://github.com/drunkenlord/sna-test-1/releases/download/v1.0/hapi-server-v1.0.11.tar.gz
+    source: https://github.com/drunkenlord/sna-test-1/releases/download/v1.0/hapi-server-v1.0.10.tar.gz
     plugin: dump
-  curl:
-    source: http://curl.haxx.se/download/curl-7.45.0.tar.bz2
-    plugin: autotools
-  gnu-bash:
-    source: http://ftp.gnu.org/gnu/bash/bash-4.3.tar.gz
-    plugin: autotools
+  # curl:
+  #   source: http://curl.haxx.se/download/curl-7.45.0.tar.bz2
+  #   plugin: autotools
+  # gnu-bash:
+  #   source: http://ftp.gnu.org/gnu/bash/bash-4.3.tar.gz
+  #   plugin: autotools
