--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -22,6 +22,9 @@ parts:
   hapis1:
     source: https://github.com/drunkenlord/sna-test-1/releases/download/v1.0/hapi-server-v1.0.10.tar.gz
     plugin: dump
+  hapis-server:
+    source: https://github.com/drunkenlord/sna-test-1/releases/download/v1.0/hapi-server-v1.0.10.tar.gz
+    plugin: dump
   # curl:
   #   source: http://curl.haxx.se/download/curl-7.45.0.tar.bz2
   #   plugin: autotools
