--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,6 +7,10 @@ description: |
 grade: devel
 confinement: devmode
 
+architectures:
+  - build-on: amd64
+  - build-on: i386
+
 apps:
   # curl:
   #   command: curl
