--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: hapi-combined4
+name: hapi-combined5
 base: core18
 version: '1.0.11'
 summary: Hapi Server Linux-x64
@@ -6,6 +6,8 @@ description: |
   Hapi Server Linux-x64
 grade: devel
 confinement: devmode
+architectures:
+  - build-on: amd64
 
 apps:
   curl:
@@ -13,9 +15,9 @@ apps:
   # bash:
   #   command: bash
   hapis1:
-     command: /snap/hapi-combined4/current/bin/node /snap/hapi-combined4/current/test/server-test.js
+     command: /snap/hapi-combined5/current/bin/node /snap/hapi-combined5/current/test/server-test.js
   hapis-server:
-    command: /snap/hapi-combined4/current/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
+    command: /snap/hapi-combined5/current/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
 
   
 parts:
