--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: hapi-combined9
+name: hapi-combined10
 base: core18
 version: '1.0.11'
 summary: Hapi Server Linux-x64
@@ -15,9 +15,9 @@ apps:
   # bash:
   #   command: bash
   hapis1:
-     command: /snap/hapi-combined9/current/bin/node /snap/hapi-combined9/current/test/server-test.js
+     command: /snap/hapi-combined10/current/hapi-server-v1.0.10/bin/node /snap/hapi-combined10/current/hapi-server-v1.0.10/test/server-test.js
   hapis-server:
-    command: /snap/hapi-combined9/current/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
+    command: /snap/hapi-combined10/current/hapi-server-v1.0.10/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
 
   
 parts:
