--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: hapi-combined12
+name: hapi-combo5
 base: core18
 version: '1.0.11'
 summary: Hapi Server Linux-x64
@@ -15,9 +15,9 @@ apps:
   # bash:
   #   command: bash
   hapis1:
-     command: /snap/hapi-combined12/current/hapi-server-v1.0.10/bin/node /snap/hapi-combined12/current/hapi-server-v1.0.10/test/server-test.js
+     command: /snap/hapi-combo5/current/hapi-server-v1.0.10/bin/node /snap/hapi-combo5/current/hapi-server-v1.0.10/test/server-test.js
   hapis-server:
-     command: /snap/hapi-combined12/current/hapi-server-v1.0.10/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
+    command: /snap/hapi-combo5/current/hapi-server-v1.0.10/hapi-server --logdir="/home/parallels/hapi_logs" --metadata_dir="/home/parallels/hapi_metadata" 
 
   
 parts:
@@ -30,6 +30,3 @@ parts:
   curl:
     source: http://curl.haxx.se/download/curl-7.45.0.tar.bz2
     plugin: autotools
-  # gnu-bash:
-  #   source: http://ftp.gnu.org/gnu/bash/bash-4.3.tar.gz
-  #   plugin: autotools
